--- a/post.html
+++ b/post.html
@@ -18,33 +18,44 @@
 </head>
 <body class="left-sidebar">
 <div id="wrapper">
-	<div class="device-category-navigation">
-		<a data-w-id="7adfb18e-a8de-4787-9e72-93c1f0a87682" href="/services/tech" class="device-nav-block tech w-inline-block">
-			<h3 class="nav-block-cat-title">Tech</h3>
-				<div class="article-read-more-container device">
-					<img src="https://global-uploads.webflow.com/5f6820908df5f33d7534e70b/5f6820908df5f319bf34e76b_arrow.svg" alt="" class="read-more-arrow">
-					<h4 class="nav-block-cta-text">Tech&nbsp;Capabilities</h4>
-				</div>
-			</a>
-		
-		<a data-w-id="7adfb18e-a8de-4787-9e72-93c1f0a87689" href="/services/media" class="device-nav-block media w-inline-block">
-			<h3 class="nav-block-cat-title">Media</h3>
-				<div class="article-read-more-container device">
-					<img src="https://global-uploads.webflow.com/5f6820908df5f33d7534e70b/5f6820908df5f319bf34e76b_arrow.svg" alt="" class="read-more-arrow">
-					<h4 class="nav-block-cta-text">Media&nbsp;Capabilities</h4>
-				</div>
-			</a>
-		<a data-w-id="7adfb18e-a8de-4787-9e72-93c1f0a87690" href="/services/intellectual-property" class="device-nav-block ip w-inline-block">
-			<h3 class="nav-block-cat-title">IP</h3>
-				<div class="article-read-more-container device"><img src="https://global-uploads.webflow.com/5f6820908df5f33d7534e70b/5f6820908df5f319bf34e76b_arrow.svg" alt="" class="read-more-arrow">
-					<h4 class="nav-block-cta-text">IP&nbsp;Capabilities</h4>
-				</div>
-			</a>
-		</div>
-
   <div id="content" class="mobileUI-main-content">
     <div id="content-inner">
-       
+       <article class="is-post is-post-excerpt">
+        <header>
+          <h2><a href="#">Welcome to Striped</a></h2>
+          <span class="byline">A free, fully responsive HTML5 site template by AJ for HTML5 Up!</span> </header>
+        <div class="info"> <span class="date"><span class="month">Jan<span>uary</span></span> <span class="day">14</span><span class="year">, 2045</span></span>
+          <ul class="stats">
+            <li><a href="#" class="link-icon24 link-icon24-1">16</a></li>
+            <li><a href="#" class="link-icon24 link-icon24-2">32</a></li>
+            <li><a href="#" class="link-icon24 link-icon24-3">64</a></li>
+            <li><a href="#" class="link-icon24 link-icon24-4">128</a></li>
+          </ul>
+        </div>
+        <a href="#" class="image image-full"><img src="images/n33-robot-invader.jpg" alt=""></a>
+        <p> <strong>Hello!</strong> You're looking at Striped, a fully responsive HTML5 site template designed by AJ for HTML5 Up! It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details). </p>
+        <p> Striped is released for free under the Creative Commons Attribution license so feel free to use it for personal projects or even commercial ones &ndash; just be sure to credit HTML5 Up! for the design. If you like what you see here, be sure to check out HTML5 Up! for more cool designs or follow me on Twitter for new releases and updates. </p>
+      </article>
+      <!--<article class="is-post is-post-excerpt">
+        <header>
+          <h2><a href="#">Lorem ipsum dolor sit amet</a></h2>
+          <span class="byline">Feugiat interdum sed commodo ipsum consequat dolor nullam metus</span> </header>
+        <div class="info"> <span class="date"><span class="month">Jan<span>uary</span></span> <span class="day">8</span><span class="year">, 2045</span></span>
+          <ul class="stats">
+            <li><a href="#" class="link-icon24 link-icon24-1">12</a></li>
+            <li><a href="#" class="link-icon24 link-icon24-2">24</a></li>
+            <li><a href="#" class="link-icon24 link-icon24-3">48</a></li>
+            <li><a href="#" class="link-icon24 link-icon24-4">96</a></li>
+          </ul>
+        </div>
+        <a href="#" class="image image-full"><img src="images/fotogrph-dark-stairwell.jpg" alt=""></a>
+        <p> Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore. Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante. </p>
+      </article> -->
+      <div class="pager">
+        <!--<a href="#" class="button previous">Previous Page</a>-->
+        <div class="pages"> <a href="#" class="active">1</a> <a href="#">2</a> <a href="#">3</a> <a href="#">4</a> <span>&hellip;</span> <a href="#">20</a> </div>
+        <a href="#" class="button next">Next Page</a> </div>
+    </div>
   </div>
   <div id="sidebar">
     <div id="logo">
