--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 							<ul>
 								<li><a href="#">About Me</a></li>
 								<li><a href="#">Blog Post</a></li>
-								<li><a href="#">Categories</a></li>
 								<li><a href="#">Data Analytics Platform</a></li>
 							</ul>
 						</nav>
@@ -47,7 +46,6 @@
 									<li><a href="index.html"><h3>Home</h3></a></li>
 									<li><a href="#"><h3>About Me</h3></a></li>
 									<li><a href="#"><h3>Blog Post</h3></a></li>
-									<li><a href="#"><h3>Categories</h3></a></li>
                                     <li><a href="#"><h3>Data Analytics Platform</h3></a></li>
 								</ul>
 							</section>
@@ -63,32 +61,26 @@
 
 						<!-- Intro -->
 							<section id="intro">
-								<a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
 								<header>
-									<h2>Future Imperfect</h2>
-									<p>Another fine responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+									<h2>"Seek Discomfort"</h2>
+									<p>Always want to challenge myself and try out new things!</p>
+                                    
+                                    <h3>Welcome to James Chong's blog! Navigate from above~</h3>
 								</header>
 							</section>
-
-						
-
-
-
-						<!-- Footer -->
-							<section id="footer">
-								<!-- <ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
-									<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-								</ul> -->
-                                <ul></ul>
-								<p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>. Images: <a href="http://unsplash.com">Unsplash</a>.</p>
-							</section>
-
 					</section>
-
+                <!-- Footer -->
+                <section id="footer">
+                    <!-- <ul class="icons">
+                        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                        <li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
+                        <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                    </ul> -->
+                    <ul></ul>
+                    <p class="copyright">&copy; James' Blog. Design: <a href="http://html5up.net">HTML5 UP</a></p>
+                </section>
 			</div>
 
 		<!-- Scripts -->
