--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 						<!-- Intro -->
 							<section id="intro">
 								<header>
+                                    <p>My motto is</p>
 									<h2>"Seek Discomfort"</h2>
 									<p>Always want to challenge myself and try out new things!</p>
                                     
