--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 						<!-- Intro -->
 							<section id="intro">
 								<header>
-                                    <p>My motto is</p>
+                                    <p>Don't be afraid to</p>
 									<h2>"Seek Discomfort"</h2>
-									<p>Always want to challenge myself and try out new things!</p>
+									
                                     
-                                    <h3>Welcome to James Chong's blog! Navigate from above~</h3>
+                                    <h3>Welcome to James Chong's blog! Navigate from above~~</h3>
 								</header>
 							</section>
 					</section>
