--- a/about.html
+++ b/about.html
@@ -70,10 +70,11 @@
 									<p>My motto is as what my front page mentioned, <h3>"Seek Discomfort"</h3></p>
 									<p>I believe that only when we step out of our comfort zone, we can learn and improve ourselves, which is super important in the IT industry.</p>
                                     
-									<p>You can find me through my Linkedin and email.</p>
+									<p>You can find me through my Linkedin, Github and email - longshanj@gmail.com.</p>
 									<ul class="icons">
-										<li><a href="www.linkedin.com/in/james-chong-1025" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-										<li><a href="mailto:longshanj@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+										<li><a href="https://www.linkedin.com/in/james-chong-1025/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+										<li><a href="https://github.com/hkwind/hkwind.github.io" class="icon brands fa-github"><span class="label">Twitter</span></a></li>
+
 									</ul>
 								
 							</section>
