--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 									<p>I firmly believe that stepping out of our comfort zones is essential to personal growth and development, especially in the fast-paced and ever-evolving IT industry.</p>
                                     <p>I am constantly striving to improve myself through reading books, learning from the Giants and getting my hands dirty with coding.</p>
 									<p>One of my passions is to create convenient IT tools that help improve people's lives.</p>
-									<p>You can find me through my Linkedin, Github and email - longshanj@gmail.com. Look forward to knowing you in the future</p>
+									<p>Feel free to reach out via my LinkedIn, Github, or email at longshanj@gmail.com. Look forward to knowing you in the future</p>
 									
 
 									<ul class="icons">
