--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<ul>
 								<li><a href="about.html">About Me</a></li>
 								<li><a href="post.html">Blog Post</a></li>
-								<li><a href="dataanalytics.html">Data Analytics Platform</a></li>
+								<li><a href="human.html">Human Figure Tools</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -46,7 +46,7 @@
 									<li><a href="index.html"><h3>Home</h3></a></li>
 									<li><a href="about.html"><h3>About Me</h3></a></li>
 									<li><a href="post.html"><h3>Blog Post</h3></a></li>
-                                    <li><a href="dataanalytics.html"><h3>Data Analytics Platform</h3></a></li>
+                                    <li><a href="human.html"><h3>Human Figure Tools</h3></a></li>
 								</ul>
 							</section>
 
