--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nolan - Personal Portfolio</title>
+  <title>Personal Portfolio website of James</title>
 
   <!-- favicon -->
   <link rel="shortcut icon" href="./img/logo.ico" type="img/n-icon">
@@ -40,9 +40,9 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Nolan Lwin">Nolan Lwin</h1>
+          <h1 class="name" title="James Chong">James Chong</h1>
 
-          <p class="title">Undergraduate Student</p>
+          <p class="title">Analyst Programmer</p><p class="title">Instructional Designer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -68,7 +68,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto: nl020@bucknell.edu" class="contact-link">nl020@bucknell.edu</a>
+              <a href="mailto: longshanj@gmail.com" class="contact-link">longshanj@gmail.com</a>
             </div>
 
           </li>
@@ -82,7 +82,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel: +1 (272) 788-0307" class="contact-link">+1 (272) 788-0307</a>
+              <a href="tel: +852 63852276" class="contact-link">+852 63852276</a>
             </div>
 
           </li>
@@ -96,49 +96,28 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Lewisburg, Pennsylvania, United States</address>
+              <address>Hong Kong</address>
+            </div>
+
+          </li>
+
+          <li class="contact-item">
+
+            <div class="icon-box">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">Linkedin</p>
+
+              <a href="https://www.linkedin.com/in/james-chong-1025" class="contact-link">https://www.linkedin.com/in/james-chong-1025</a>
             </div>
 
           </li>
 
         </ul>
 
-        <div class="separator"></div>
-
-          <ul class="social-list">
-
-            <li class="social-item">
-              <a href="https://www.linkedin.com/in/naing-oo-lwin-nolan/" class="social-link" target="_blank">
-                <ion-icon name="logo-linkedin"></ion-icon>
-              </a>
-            </li>
-
-            <li class="social-item">
-              <a href="https://www.github.com/i-am-nolan25" class="social-link" target="_blank">
-                <ion-icon name="logo-github"></ion-icon>
-              </a>
-            </li>
-
-            <li class="social-item">
-              <a href="https://www.facebook.com/i.am.nolan25" class="social-link" target="_blank">
-                <ion-icon name="logo-facebook"></ion-icon>
-              </a>
-            </li>
-
-            <li class="social-item">
-              <a href="https://www.instagram.com/i_am_nolan25/" class="social-link" target="_blank">
-                <ion-icon name="logo-instagram"></ion-icon>
-              </a>
-            </li>
-
-            <li class="social-item">
-              <a href="https://twitter.com/NolanOlson25" class="social-link" target="_blank">
-                <ion-icon name="logo-twitter"></ion-icon>
-              </a>
-
-          </ul>
-
-      </div>
+       
 
     </aside>
 
@@ -154,7 +133,7 @@
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>Nolan</button>
+            <button class="navbar-link  active" data-nav-link>Main</button>
           </li>
 
           <li class="navbar-item">
