--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div class="sidebar-info">
 
         <!-- <figure class="avatar-box">
-          <img src="./img/nolan-avatar.png" alt="Nolan Lwin" width="80">
+          <img src="./img/james-avatar.png" alt="james Lwin" width="80">
         </figure> -->
 
         <figure class="avatar-box">
-          <img class="nolan-avatar" src="./img/nolan-avatar.gif" alt="Nolan Lwin">
+          <img class="james-avatar" src="./img/james-avatar.gif" alt="james Lwin">
         </figure>
 
         <div class="info-content">
@@ -157,23 +157,23 @@
       </nav>
 
 
-      <!-- #Nolan -->
+      <!-- #james -->
 
-      <article class="nolan active" data-page="nolan">
+      <article class="james active" data-page="james">
 
         <header>
-          <h2 class="h2 article-title">I'm Nolan.</h2>
+          <h2 class="h2 article-title">I'm james.</h2>
         </header>
 
         <!-- introduction -->
 
-        <section class="nolan-text">
+        <section class="james-text">
           <p>
-            Welcome to my portfolio website! My name is Nolan Lwin, and I am thrilled to have you here. Allow me to introduce myself and share a glimpse into my professional journey.
+            Welcome to my portfolio website! Feel free to explore!
           </p>
 
           <p>
-            I am a passionate software engineer with a keen interest in artificial intelligence, tech consulting, and entrepreneurship. My journey in the world of technology has been driven by a desire to create innovative solutions that have a positive impact. With a strong foundation in software development and a love for emerging technologies, I am dedicated to pushing the boundaries of what is possible. Join me as we explore my projects and delve into the exciting realm of software engineering and its intersection with AI, tech consulting, and entrepreneurship. Let's embark on this journey together!
+            I’m a dedicated System Analyst with a passion for instructional design. I excel in negotiating and communicating to accurately define and understand user requirements, while my Master's in Data Science (earned with distinction) has sharpened my analytical capabilities. As a lifelong learner, I continuously seek opportunities to expand my knowledge and thrive in environments where I can work independently to deliver exceptional results. I am eager to leverage my analytical background and communication strengths to design impactful educational programs.
           </p>
         </section>
 
@@ -182,7 +182,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Specialized in</h3>
 
           <ul class="service-list">
 
@@ -294,7 +294,7 @@
           <p class="next-subtitle">Let's work together.</p>
 
           <p class="next-text">
-            I am currently seeking internship opportunities for Summer 2025. If you are interested in working with me, please feel free to reach out to me via <a class="email-link" href="mailto:nl020@bucknell.edu" target="_blank" style="display: inline">email</a> or <a class="linkedin-link" href="https://www.linkedin.com/in/naing-oo-lwin-nolan/" target="_blank">LinkedIn</a>. You can also drop me a message via the<a class="navbar-link" data-nav-link style="display:inline">Contact</a> page. I look forward to hearing from you!
+            I am currently seeking internship opportunities for Summer 2025. If you are interested in working with me, please feel free to reach out to me via <a class="email-link" href="mailto:nl020@bucknell.edu" target="_blank" style="display: inline">email</a> or <a class="linkedin-link" href="https://www.linkedin.com/in/naing-oo-lwin-james/" target="_blank">LinkedIn</a>. You can also drop me a message via the<a class="navbar-link" data-nav-link style="display:inline">Contact</a> page. I look forward to hearing from you!
           </p>
 
         </section>
@@ -314,7 +314,7 @@
 
           <div class="intro-name">
             <p class="fullname">
-              Nolan Lwin
+              james Lwin
             </p>
           </div>
 
@@ -325,19 +325,19 @@
           </div>
 
           <div class="intro-pronunciation">
-              <audio class="pronunciation-audio" src="./audio/nolan-lwin-pronunciation.m4a" alt="Pronunciation of Naing Oo Lwin"></audio>
+              <audio class="pronunciation-audio" src="./audio/james-lwin-pronunciation.m4a" alt="Pronunciation of Naing Oo Lwin"></audio>
               <ion-icon class="audio-icon" name="volume-high-outline"></ion-icon>
             </a>
           </div>
 
         </section>
 
-        <!-- Nolan's photo, introduction, passions, and hobbies -->
+        <!-- james's photo, introduction, passions, and hobbies -->
 
         <section class="photo-and-intro-details">
 
           <div class="intro-photo">
-            <img class="nolan-photo" src="./img/nolan-lwin.png" alt="Nolan Lwin">
+            <img class="james-photo" src="./img/james-lwin.png" alt="james Lwin">
           </div>
 
           <div class="intro-text">
@@ -346,7 +346,7 @@
             </p><br>
 
             <p>
-              My name is <span class="nolan-name">Nolan Lwin</span>. I am currently a computer science major with a minor in business analytics. As an aspiring software engineer, my heart beats for the world of technology and its transformative power. From a young age, I found myself captivated by the wonders of artificial intelligence, and this fascination has only grown stronger as I've ventured further into my studies. 🤖
+              My name is <span class="james-name">james Lwin</span>. I am currently a computer science major with a minor in business analytics. As an aspiring software engineer, my heart beats for the world of technology and its transformative power. From a young age, I found myself captivated by the wonders of artificial intelligence, and this fascination has only grown stronger as I've ventured further into my studies. 🤖
             </p><br>
 
             <p>
@@ -377,14 +377,14 @@
         <section class="instagram-profile">
 
           <div class="username-and-logo">
-            <img class="nolan-logo" src="./img/nolan-profile.jpg" alt="Nolan's Logo">
+            <img class="james-logo" src="./img/james-profile.jpg" alt="james's Logo">
 
-            <p class="username">Nolan Lwin</p>
+            <p class="username">james Lwin</p>
 
             <img class="bluemark" src="./img/bluemark.png" alt="bluemark">
           </div>
 
-          <a class="follow-button" href="https://www.instagram.com/i_am_nolan25/" alt="Instagram Profile Link" target="_blank"> 
+          <a class="follow-button" href="https://www.instagram.com/i_am_james25/" alt="Instagram Profile Link" target="_blank"> 
             <span class="icon"><svg height="33" viewBox="0 0 128 128" width="33" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><linearGradient id="a" gradientTransform="matrix(1 0 0 -1 594 633)" gradientUnits="userSpaceOnUse" x1="-566.711" x2="-493.288" y1="516.569" y2="621.43"><stop offset="0" stop-color="#ffb900"></stop><stop offset="1" stop-color="#9100eb"></stop></linearGradient><circle cx="64" cy="64" fill="url(#a)" r="64"></circle><g fill="#fff"><path d="m82.333 104h-36.666c-11.947 0-21.667-9.719-21.667-21.667v-36.666c0-11.948 9.72-21.667 21.667-21.667h36.666c11.948 0 21.667 9.719 21.667 21.667v36.667c0 11.947-9.719 21.666-21.667 21.666zm-36.666-73.333c-8.271 0-15 6.729-15 15v36.667c0 8.271 6.729 15 15 15h36.666c8.271 0 15-6.729 15-15v-36.667c0-8.271-6.729-15-15-15z"></path><path d="m64 84c-11.028 0-20-8.973-20-20 0-11.029 8.972-20 20-20s20 8.971 20 20c0 11.027-8.972 20-20 20zm0-33.333c-7.352 0-13.333 5.981-13.333 13.333 0 7.353 5.981 13.333 13.333 13.333s13.333-5.98 13.333-13.333c0-7.352-5.98-13.333-13.333-13.333z"></path><circle cx="85.25" cy="42.75" r="4.583"></circle></g></svg></span>
             <span class="text1">Follow me</span>
             <span class="text2">1K Followers</span> 
@@ -399,31 +399,31 @@
 
           <div class="uploaded-instagram-photos">
             <a href="https://www.instagram.com/p/CuDl00aOy2a/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-1.jpg" alt="Nolan at Grand Canyon, Arizona">
+              <img src="./img/james-1.jpg" alt="james at Grand Canyon, Arizona">
             </a>
             <a href="https://www.instagram.com/p/Cs2YILPO6v4/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-2.jpg" alt="Nolan at Universal Studio Japan">
+              <img src="./img/james-2.jpg" alt="james at Universal Studio Japan">
             </a>
             <a href="https://www.instagram.com/p/Ckli1dbuqgP/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-3.jpg" alt="Nolan at Times Square, New York">
+              <img src="./img/james-3.jpg" alt="james at Times Square, New York">
             </a>
             <a href="https://www.instagram.com/p/CsaD36nv66o/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-4.jpg" alt="Nolan at Fushimi Inari Shrine, Kyoto">
+              <img src="./img/james-4.jpg" alt="james at Fushimi Inari Shrine, Kyoto">
             </a>
             <a href="https://www.instagram.com/p/CpJyRHIuAQX/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-5.png" alt="Nolan at Montage Mountain, Pennsylvania">
+              <img src="./img/james-5.png" alt="james at Montage Mountain, Pennsylvania">
             </a>
             <a href="https://www.instagram.com/p/Cp3uhziOOpV/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-6.jpg" alt="Nolan at Space Needle, Seattle">
+              <img src="./img/james-6.jpg" alt="james at Space Needle, Seattle">
             </a>
             <a href="https://www.instagram.com/p/Cr9t8lQOnb4/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-7.jpg" alt="Nolan at TEDx Bucknell University">
+              <img src="./img/james-7.jpg" alt="james at TEDx Bucknell University">
             </a>
             <a href="https://www.instagram.com/p/CjO-sHQulCy/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-8.jpg" alt="Nolan at Worlds End State Park, Pennsylvania">
+              <img src="./img/james-8.jpg" alt="james at Worlds End State Park, Pennsylvania">
             </a>
             <a href="https://www.instagram.com/p/Cp9PWTeMgnK/?utm_source=ig_web_copy_link&igshid=MzRlODBiNWFlZA==" target="_blank">
-              <img src="./img/nolan-9.jpg" alt="Nolan at Microsoft Redmond Woods Campus, Seattle">
+              <img src="./img/james-9.jpg" alt="james at Microsoft Redmond Woods Campus, Seattle">
             </a>
           </div>
 
@@ -648,7 +648,7 @@
         <section class="download-button">
 
             <div class="download-resume-button">
-                <a href="./documents/Nolan_Lwin_s_Resume.pdf" alt="Download Nolan Lwin's Resume" download="Nolan Lwin's Resume.pdf" class="btn btn-download">
+                <a href="./documents/james_Lwin_s_Resume.pdf" alt="Download james Lwin's Resume" download="james Lwin's Resume.pdf" class="btn btn-download">
                   <div class="download-resume-text">Download My Full Resume as PDF</div>
                 </a>
             </div>
