Added front page photo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </figure> -->
 
         <figure class="avatar-box">
-          <img class="james-avatar" src="./img/james-avatar.gif" alt="james Lwin">
+          <img class="james-avatar" src="./img/james.JPG" alt="James Chong's avatar">
         </figure>
 
         <div class="info-content">
@@ -173,8 +173,13 @@
           </p>
 
           <p>
-            I’m a dedicated System Analyst with a passion for instructional design. I excel in negotiating and communicating to accurately define and understand user requirements, while my Master's in Data Science (earned with distinction) has sharpened my analytical capabilities. As a lifelong learner, I continuously seek opportunities to expand my knowledge and thrive in environments where I can work independently to deliver exceptional results. I am eager to leverage my analytical background and communication strengths to design impactful educational programs.
+            I’m a dedicated System Analyst with a passion for instructional design. I excel in negotiating and communicating to accurately define and understand user requirements, while my Master's in Data Science (earned with distinction) has sharpened my analytical capabilities. As a lifelong learner, I continuously seek opportunities to expand my knowledge and thrive in environments where I can work independently to deliver exceptional results. 
           </p>
+
+          <p>
+            I am eager to leverage my analytical background and communication strengths to design impactful educational programs.
+          </p>
+          
         </section>
 
 
