--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technology Consulting</h4>
+                <h4 class="h4 service-item-title">Instructional Desi</h4>
 
                 <p class="service-item-text">
-                  Leverage expertise in technology and industry trends to provide strategic guidance and innovative solutions that drive your business forward.
+                  Passionate and independent instructional designer with a proven track record in small project success.
                 </p>
               </div>
 
@@ -470,7 +470,7 @@
 
               <p class="timeline-text">
                 <ol class="job-description">
-                  <li>• Defined requirements and workflows for a public facing services' forms and admin portal according to business users' requirements</li>
+                  <li>• Defined requirements and workflows for a public facing services and admin portal according to business users' requirements</li>
 
                   <li>• Prepared and conducted system tests, including unit test, regression test and load test for a public facing services</li>
 
@@ -523,7 +523,7 @@
               <h4 class="h4 timeline-item-title">City University of Hong Kong</h4>
 
               <p class="timeline-text">
-                Master of Science in Data Schiece
+                Master of Science in Data Science
               </p>
 
               <span>Sep 2022 - Jun 2024</span>
@@ -613,7 +613,7 @@
         <section class="download-button">
 
             <div class="download-resume-button">
-                <a href="./documents/james_Lwin_s_Resume.pdf" alt="Download james Lwin's Resume" download="james Lwin's Resume.pdf" class="btn btn-download">
+                <a href="./documents/2025_Updated_Resume.pdf" alt="Download  Resume" download="Resume.pdf" class="btn btn-download">
                   <div class="download-resume-text">Download My Full Resume as PDF</div>
                 </a>
             </div>
@@ -676,7 +676,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web Devlopment</button>
+                <button data-select-item>Instructional Design</button>
               </li>
 
               <li class="select-item">
@@ -693,77 +693,26 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Technical Documentation">
-              <a href="https://stifel.sharepoint.com/sites/TechProdDevelop">
+
+            <li class="project-item  active" data-filter-item data-category="Instructional Design">
+              <a href="./projects/biology/biology_prototype.html">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./img/docuflow.png" alt="Stifel SharePoint Site" loading="lazy">
+                  <img src="./img/project-1.png" alt="Biology for secondary student" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Stifel DocuFlow</h3>
+                <h3 class="project-title">Biology for secondary student</h3>
 
-                <p class="project-category">Technical Documentation</p>
+                <p class="project-category">Instructional Design </p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Web Development">
-              <a href="./projects/tedx-bucknell-web-dev/tedxbucknell_web_dev.html">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./img/project-1.png" alt="TEDx Bucknell University (Web Development)" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">TEDx Bucknell University</h3>
-
-                <p class="project-category">Web Development</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="UI/UX">
-              <a href="./projects/tedx-bucknell-prototype/tedxbucknell_prototype.html">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./img/project-2.png" alt="TEDx Bucknell University (UI/UX)" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">TEDx Bucknell University</h3>
-
-                <p class="project-category">UI/UX</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="Machine Learning">
-              <a href="./projects/bp-ml-research/bp_ml_research.html">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./img/project-3.png" alt="Bell's Palsy Machine Learning Research" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Bell's Palsy Research</h3>
-
-                <p class="project-category">Machine Learning</p>
-
-              </a>
-            </li>
+            
 
           </ul>
 
