--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <h4 class="h4 service-item-title">Artificial Intelligence</h4>
 
                 <p class="service-item-text">
-                  Harness the power of cutting-edge AI algorithms to transform your business operations and unlock valuable insights.
+                  Harness the power of cutting-edge AI algorithms to transform business operations and unlock valuable insights.
                 </p>
               </div>
 
@@ -271,7 +271,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Instructional Desi</h4>
+                <h4 class="h4 service-item-title">Instructional Design</h4>
 
                 <p class="service-item-text">
                   Passionate and independent instructional designer with a proven track record in small project success.
@@ -474,8 +474,6 @@
 
                   <li>• Prepared and conducted system tests, including unit test, regression test and load test for a public facing services</li>
 
-                  <li>• Prepared and delivered the quotation document for procuring service</li>
-
                 </ol>
               </p>
 
@@ -556,7 +554,7 @@
 
         
 
-        <section class="timeline">
+        <!-- <section class="timeline">
 
           <div class="title-wrapper">
             <div class="icon-box">
@@ -608,7 +606,7 @@
 
           </ol>
 
-        </section>
+        </section> -->
 
         <section class="download-button">
 
@@ -644,7 +642,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web Development</button>
+              <button data-filter-btn>Instructional Design</button>
             </li>
 
             <li class="filter-item">
