--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
               <p class="timeline-text">
                 <ol class="job-description">
-                  <li>• Designed and/or developed RPA programs for different companies, including Hong Kong Electric Corporation Limited and Yazaki (Hong Kong) Limited, which automated hours-long operations with minimum human intervention</li>
+                  <li>• Designed and/or developed RPA programs for different companies, including Hong Kong Electric Corporation Limited and Yazaki (Hong Kong) Limited</li>
 
                   <li>• Participated in SAP BW/BO installation and development for different companies, including Citistore (Hong Kong) Limited, Aviation Security Company Limited, etc</li>
 
@@ -705,11 +705,64 @@
 
                 <h3 class="project-title">Biology for secondary student</h3>
 
-                <p class="project-category">Instructional Design </p>
+                <p class="project-category">Instructional Design</p>
 
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="Technical Documentation">
+              <a href="https://stifel.sharepoint.com/sites/TechProdDevelop">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./img/docuflow.png" alt="Stifel SharePoint Site" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Stifel DocuFlow</h3>
+
+                <p class="project-category">Technical Documentation</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Web Development">
+              <a href="./projects/tedx-bucknell-web-dev/tedxbucknell_web_dev.html">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./img/project-1.png" alt="TEDx Bucknell University (Web Development)" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">TEDx Bucknell University</h3>
+
+                <p class="project-category">Web Development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="UI/UX">
+              <a href="./projects/tedx-bucknell-prototype/tedxbucknell_prototype.html">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./img/project-2.png" alt="TEDx Bucknell University (UI/UX)" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">TEDx Bucknell University</h3>
+
+                <p class="project-category">UI/UX</p>
+
+              </a>
+            </li>
             
 
           </ul>
