--- a/index.html
+++ b/index.html
@@ -624,7 +624,6 @@
 
       </article>
 
-
       <!-- #PROJECT -->
 
       <article class="project" data-page="project">
@@ -642,7 +641,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Instructional Design</button>
+              <button data-filter-btn>Web Development</button>
             </li>
 
             <li class="filter-item">
@@ -674,7 +673,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Instructional Design</button>
+                <button data-select-item>Web Devlopment</button>
               </li>
 
               <li class="select-item">
@@ -690,25 +689,6 @@
           </div>
 
           <ul class="project-list">
-
-
-            <li class="project-item  active" data-filter-item data-category="Instructional Design">
-              <a href="./projects/biology/biology_prototype.html">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./img/project-1.png" alt="Biology for secondary student" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Biology for secondary student</h3>
-
-                <p class="project-category">Instructional Design</p>
-
-              </a>
-            </li>
 
             <li class="project-item  active" data-filter-item data-category="Technical Documentation">
               <a href="https://stifel.sharepoint.com/sites/TechProdDevelop">
@@ -763,13 +743,50 @@
 
               </a>
             </li>
-            
+
+            <li class="project-item  active" data-filter-item data-category="Machine Learning">
+              <a href="./projects/bp-ml-research/bp_ml_research.html">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./img/project-3.png" alt="Bell's Palsy Machine Learning Research" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Bell's Palsy Research</h3>
+
+                <p class="project-category">Machine Learning</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Instructional Design">
+              <a href="./projects/biology/biology_prototype.html">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./img/project-1.png" alt="Biology for secondary student" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Biology for secondary student</h3>
+
+                <p class="project-category">Instructional Design</p>
+
+              </a>
+            </li>
 
           </ul>
 
         </section>
 
       </article>
+
+      
 
 
       <!-- #CONTACT
